@@ -10,14 +10,13 @@ import pl.aswit.theatre.model.repository.PlayRepository;
 import pl.aswit.theatre.model.repository.TermRepository;
 import pl.aswit.theatre.model.repository.TheatreRepository;
 import pl.aswit.theatre.rest.client.theatre.TheaterI;
+import pl.aswit.theatre.rest.dto.TheaterPlayDto;
 import pl.aswit.theatre.rest.dto.TheaterTermDto;
 import pl.aswit.theatre.rest.dto.TheatreDataDto;
 
-import java.util.Calendar;
-import java.util.Date;
-import java.util.List;
-import java.util.Objects;
+import java.util.*;
 import java.util.stream.Collectors;
+
 @Service
 @AllArgsConstructor
 @Slf4j
@@ -32,14 +31,22 @@ public class TheatreService {
                 .stream()
                 .map(TheaterI::searchPerformances)
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
-        filterEmptyDate(theatreDataDtoList);
+                .toList();
         fixDates(theatreDataDtoList);
-        saveUnsavedPlays(theatreDataDtoList);
+        filterInvalid(theatreDataDtoList);
+        fixInvalid(theatreDataDtoList);
+//        saveUnsavedPlays(theatreDataDtoList);
         return theatreDataDtoList;
     }
 
-    private void filterEmptyDate(List<TheatreDataDto> theatreDataDtoList) {
+    private void fixInvalid(List<TheatreDataDto> theatreDataDtoList) {
+        theatreDataDtoList.stream().forEach(e->{
+            e.getTermList().forEach(f->f.getTheaterPlay().setName(f.getTheaterPlay().getName().trim()));
+            e.getPlaySet().forEach(f->f.setName(f.getName().trim()));
+        });
+    }
+
+    private void filterInvalid(List<TheatreDataDto> theatreDataDtoList) {
         theatreDataDtoList.stream().forEach(e->{
             List<TheaterTermDto> termList = e.getTermList();
             termList = termList
@@ -48,10 +55,14 @@ public class TheatreService {
                             && f.getDay() != null
                             && f.getMonth() != null
                             && f.getYear() != null
-                            && f.getHour().replaceAll(":", "").matches("\\d{4}")
+                            && f.getHour().replace(":", "").matches("\\d{4}")
                     )
-                    .collect(Collectors.toList());
+                    .filter(f-> f.getTheaterPlay().getName() != null && f.getTheaterPlay().getName().length() > 0)
+                    .toList();
             e.setTermList(termList);
+
+            Set<TheaterPlayDto> playSet = e.getPlaySet();
+            e.setPlaySet(playSet.stream().filter(f-> f.getName() != null && f.getName().length() > 0).collect(Collectors.toSet()));
         });
     }
 
@@ -59,9 +70,9 @@ public class TheatreService {
         theatreDataDtoList.stream().forEach(e->e.getTermList().stream().forEach(f-> {
             try{
                 f.setDay(String.format("%02d", Integer.valueOf(f.getDay())));
-                f.setHour(f.getHour().trim());
+                f.setHour(f.getHour() != null ? f.getHour().trim(): null);
             }catch (Exception ee){
-                System.out.println();
+                log.error(ee.getMessage(), ee);
             }
         }
         ));
@@ -84,40 +95,37 @@ public class TheatreService {
     }
 
     private void saveAndSetNewPlays(List<TheatreDataDto> theatreDataDtoList) {
-        theatreDataDtoList.stream().forEach(e->{
-            e.getPlaySet().stream().forEach(f-> {
-                Play play = playRepository.findByName(f.getName());
-                if(play == null){
-                    Play addedPlay = playRepository.save(Play
-                            .builder()
-                            .name(f.getName())
-                            .link(f.getLink())
-                            .theatre(theatreRepository.findByName(e.getName()))
-                            .build()
-                    );
-                    log.info("Added play: " + addedPlay);
+        theatreDataDtoList.stream().forEach(e-> e.getPlaySet().stream().forEach(f-> {
+            Play play = playRepository.findByName(f.getName());
+            if(play == null){
+                Play addedPlay = playRepository.save(Play
+                        .builder()
+                        .name(f.getName())
+                        .link(f.getLink())
+                        .description(f.getDescription())
+                        .theatre(theatreRepository.findByName(e.getName()))
+                        .build()
+                );
+                log.info("Added play: " + addedPlay);
 
-                }
-            });
-        });
+            }
+        }));
     }
 
     private void saveNewTerms(List<TheatreDataDto> theatreDataDtoList) {
-        theatreDataDtoList.stream().forEach(e->{
-            e.getTermList().stream().forEach(f->{
-                Play play = playRepository.findByName(f.getTheaterPlay().getName());
-                Date date = prepareDate(f.getHour(), f.getDay(), f.getMonth(), f.getYear());
-                Term term = termRepository.findByPlayAndPerformanceDate(play, prepareDate(f.getHour(), f.getDay(), f.getMonth(), f.getYear()));
-                if(term == null){
-                    Term addedTerm = termRepository.save(Term
-                            .builder()
-                            .play(play)
-                            .performanceDate(date)
-                            .build());
-                    log.info("Added term: "+ addedTerm);
-                }
-            });
-        });
+        theatreDataDtoList.stream().forEach(e-> e.getTermList().stream().forEach(f->{
+            Play play = playRepository.findByName(f.getTheaterPlay().getName());
+            Date date = prepareDate(f.getHour(), f.getDay(), f.getMonth(), f.getYear());
+            Term term = termRepository.findByPlayAndPerformanceDate(play, prepareDate(f.getHour(), f.getDay(), f.getMonth(), f.getYear()));
+            if(term == null){
+                Term addedTerm = termRepository.save(Term
+                        .builder()
+                        .play(play)
+                        .performanceDate(date)
+                        .build());
+                log.info("Added term: "+ addedTerm);
+            }
+        }));
     }
 
     private Date prepareDate(String hour, String day, String month, String year){
